Fix: Adjusted icons and spacing for navlinks for sidebar layouts

--- a/src/lazy-components/nav-link/sidebar-nav-link/lazy-side-bar-nav-link-list.module.css
+++ b/src/lazy-components/nav-link/sidebar-nav-link/lazy-side-bar-nav-link-list.module.css
@@ -1,5 +1,4 @@
 .navlink {
     border-radius: 8px;
     font-size: 1.25rem;
-    margin: .5rem 0;
 }
